# rust-cli

./: Cargo.toml
src/: lib.rs  main.rs
tests/: cli.rs
