[package]
name = "grrs"
version = "0.1.0"
authors = ["jswiss <swissjoshua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
indicatif = "0.15.0"
log = "0.4.11"
assert_cmd = "1.0.1"
predicates = "1.0.5"
tempfile = "3"
